Node.removeChild() 내용 수정

--- a/_posts/2018-08-22-Node.removeChild.md
+++ b/_posts/2018-08-22-Node.removeChild.md
@@ -8,7 +8,7 @@ tags: [ES6, JS]
 ---
 # Node.removeChild()
 
-The Node.removeChild() method removes a child node from the DOM. Returns removed node.
+Node.removeChild() 메소드는 DOM 에서 자식 노드를 제거해준다. 리턴 값은 삭제딘 노드이다.
 
 ## 구문(Syntax)
 
